--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html {
         "Open Sans",
         "Helvetica Neue",
         sans-serif;
-    background: black;
+    background: #29272b;
     color: white;
+}
+#imgosu {
+    max-width: 12%;
+    height: auto;
 }
